--- a/filmoteka/package.json
+++ b/filmoteka/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.2",
     "lodash": "^4.17.21",
+    "mongodb": "^4.12.1",
+    "objectid-tohexstring": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
